<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">¡Hunga!</string>
    <string name="app_id">794B7BBF</string>
    <string name="action_settings">Settings</string>
    <string name="pref_developers_title">Developers</string>
    <string name="pref_logging">Logging</string>
    <string name="pref_logging_summary">Activates DDMS-logging</string>
    <string name="pref_logging_file">Write to logfile</string>
    <string name="pref_basesettings_title">Grundeinstellungen Für die Suche</string>
    <string name="pref_typeselector">Suchwert</string>
    <string name="pref_typeselector_default">kcal</string>
    <string name="pref_reload_title">Daten</string>
    <string name="action_sortphe">Phe</string>
    <string name="action_recepies">Rezepte</string>
    <string name="action_food">Nahrungsmittel</string>

    <string name="pref_email_title">Email Einstellen</string>
    <string name="email_logdata">Email Daten</string>
    <string name="pref_email_summary">Email Account einstellen</string>
    <string name="pref_summary_email_user"></string>
    <string name="pref_email_user">User</string>
    <string name="pref_summary_email_password"></string>
    <string name="pref_email_pasword">Passwort</string>
    <string name="pref_summary_email_smtpserver">Ihre SMTP-Server-Address</string>
    <string name="pref_email_smtpserver">SMTP-Server</string>
    <string name="pref_summary_email_smtpserver_port">Ihr Server-Port</string>
    <string name="pref_email_smtpserver_port">Port</string>
    <string name="be_advised_google_mail">Diese Applikation speichert die Nutzerdaten lokal.\n\nBitte ein spezifisches Passwort nutzen.\nGoogle Mail erlaubt 2-Factor-Authentication und speizifisches Passwörter. Mehr unter http://www.google.com/landing/2step/\n</string>
    <string name="email_addresses">Adresaten (mit Komma trennen)</string>
    <string name="pref_email_addressessum">Bitte alle Email-Adressen an, an die das Programm Benachrichtigungen schicken soll</string>
    <string name="pref_email_addresses">Adressen</string>
    <string name="pref_minimum_food">Mindestgewicht für die Suche (g)</string>
    <string name="pref_maximum_food">Maximalgewicht für die Suche (g)</string>
    <string name="action_errors">Errors</string>
    <string name="pref_errors">Error Liste</string>
    <string name="searchForFood">Suche</string>
    <string name="action_scan">Barcode Scan</string>
    <string name="addToDataBase">Zur Datenbank hinzufügen</string>
    <string name="productname">Produktname</string>
    <string name="productnameLabel">Prduktname</string>
    <string name="barcode">Strichcode:</string>
    <string name="compulsorySymbol">*</string>
    <string name="itemGoodLabel">Stückgut</string>
    <string name="treataspiece">istStückgut</string>
    <string name="itemTypeLabel">Stückbezeichnung</string>
    <string name="solidFoodCheckBox">Flüssig (ml anstelle von g nutzen)</string>
    <string name="weightPerItemLabel">Gewicht pro Stück</string>
    <string name="for100grams">auf 100 g</string>
    <string name="kcalper100g">kcal</string>
    <string name="fatper100g">Fett</string>
    <string name="satfatper100g">  d. ges. Fettsäuren</string>
    <string name="satfatper100gshort">  d. ges.</string>
    <string name="carboper100g">Kohlenh.</string>
    <string name="proteinper100g">Eiweiß</string>
    <string name="saltper100g">Salz</string>
    <string name="additzionalSuggar">Zusätzlicher Zucker</string>
    <string name="addittionalSuggar">Zusätzlicher Zucker</string>
    <string name="uprocessedFood">Unverarbeitetes Narungsmittel</string>
    <string name="containsAlcohol">Enthällt Alkohol</string>
    <string name="morethanonefood">Mehr als ein Ergebnis</string>
    <string name="sugar100g">d. Zucker</string>
    <string name="containsCaffeine">Enthällt Koffein</string>
    <string name="rennetAlt">Labaustauschstoff</string>
    <string name="omnomnom">Omnomnom</string>
    <string name="store">Speichern</string>
    <string name="torecipe">Rezept starten</string>
    <string name="action_cast">Cast To Chromecast</string>
    <string name="recipename">Rezeptname</string>
    <string name="fixedProportions">Feste Proportion</string>
    <string name="forHowMany">Für wie viele Personen</string>
    <string name="action_ad">Nahrungsmittel hinzufügen</string>
    <string name="input">EINGABE</string>
    <string name="scan">SCAN</string>
    <string name="signinwithgoogle">Mit Google Einloggen</string>
    <string name="account">Account</string>
    <string name="new_food_with_same_barcode">Neu mit gleichem Code</string>
    <string name="pref_log_phe">Phe-Wert anzeigen</string>
    <string name="action_star">Favorit</string>
    <string name="pref_goalsetting_title">Ziele</string>
    <string name="explain_basesettings">Ab welchem und bis zu welchem Gewicht sollen Rezepte bei der Suche berücksichtigt weren?</string>
    <string name="goal_kcal">Kalorien Ziel</string>
    <string name="goal_liquid">Flüssigkeit Ziel (ml)</string>
    <string name="action_protocoll">Protokoll</string>
    <string name="action_cancel">Schließen</string>
    <string name="pheper100g">Phe</string>
    <string name="correct_food">Korrigieren</string>
</resources>
